# green-context-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/rules/: autonomous-work.md
config/: feedback_rules.yaml  feeds.yaml  publishing.yaml  sources.yaml
config/data_catalog/: eia.yaml  electricity_maps.yaml  ember.yaml  gfw.yaml  iucn.yaml  nlr.yaml  noaa.yaml  openmeteo.yaml  uk_carbon.yaml
data/reference/: countries.json  seen_articles.json
pipeline/: claude_code_client.py  models.py  orchestrator.py  usage.py
pipeline/analysis/: article_selector.py  catalog.py  data_strategist.py  enricher.py  landscape.py  ripple.py  tradeoffs.py  utils.py
pipeline/generation/: drafter.py  editor.py  quality_gate.py  voice.py
pipeline/monitors/: rss_monitor.py
pipeline/publishing/: approval.py  notion.py
pipeline/sources/: base.py  cache.py  eia.py  electricity_maps.py  ember.py  gfw.py  iucn.py  (+4 more)
scripts/: generate_drafts.bat  process_feedback.py  publish_and_learn.bat  publish_approved.py  research_story.py  run_pipeline.py  run_scheduled.bat
tests/: test_analysis.py  test_approval.py  test_article_selector.py  test_cache.py  test_catalog.py  test_claude_code_client.py  test_content_fetcher.py  test_data_strategist.py  test_drafter.py  test_editor.py  test_eia.py  test_electricity_maps.py  test_ember.py  test_enricher.py  test_gfw.py  test_iucn.py  test_nlr.py  test_noaa.py  test_notion.py  test_openmeteo.py  test_orchestrator.py  test_quality_gate.py  test_rss_monitor.py  test_uk_carbon.py
(+2 files in other folders)
