[project]
name = "energy-context-engine"
version = "0.1.0"
description = "Automated AI pipeline for renewable energy intelligence briefs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "feedparser>=6.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
